--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,6 @@
     tools:context=".MainActivity">
     <com.wagos.calendarcard.CalendarCardPager
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="500dp"/>
 
 </RelativeLayout>
