--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="month_text_size">16sp</dimen>
+    <dimen name="calendar_card_header_height">42dp</dimen>
 </resources>
